--- a/src/components/Forms/PaymentForm/StripeCheckout/styles.global.css
+++ b/src/components/Forms/PaymentForm/StripeCheckout/styles.global.css
@@ -1,13 +1,14 @@
 /* @styled-jsx=global */
 
 .StripeElement {
-  @mixin all-transition;
+  @mixin transition;
 
   height: var(--input-height);
   padding: 0 0 0 var(--spacing-base);
   border: 1px solid var(--color-grey-light);
   border-radius: var(--spacing-x-tight);
   caret-color: var(--color-matters-green);
+  transition-property: border-color, background-color;
 
   &.StripeElement--focus {
     background-color: var(--color-green-lighter);
